--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       window.location.href = amazonURL;
     } else {
       // Default fallback (your Amazon storefront or homepage)
-      window.location.href = "https://www.amazon.com";
+      window.location.href = "https://www.facebook.com/groups/719667530963435";
     }
   </script>
 </head>
