--- a/public/redirect.html
+++ b/public/redirect.html
@@ -6,7 +6,7 @@
   <script>
     const params = new URLSearchParams(window.location.search);
     const asin = params.get("asin");
-    const affiliateTag = "YOURTAG-20";
+    const affiliateTag = "dailydealsa0f-20";
 
     if (!asin) {
       window.location.href = "/";
