Update redirect page for Amazon links

--- a/redirect.html
+++ b/redirect.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Opening Amazon Product…</title>
+  <title>Opening Amazon…</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,56 +36,68 @@
   </style>
 </head>
 <body>
-  <h2>Opening Amazon Product…</h2>
+  <h2>Opening Amazon…</h2>
   <p>If nothing happens automatically, <a id="fallback-link" href="#">click here</a>.</p>
   <div id="browser-warning">
-    <p>It looks like you're in an app browser (Facebook, Instagram, etc.).</p>
-    <p>To open the Amazon app, please tap the button below:</p>
+    <p>It looks like you're in an in-app browser (Facebook, Instagram, etc.).</p>
+    <p>To open Amazon properly, please tap the button below:</p>
     <button id="open-in-browser">Open in Browser</button>
   </div>
 
   <script>
-    // ----- Get ASIN from URL path -----
-    let path = window.location.pathname;      // e.g., "/B09G3HRMVB"
-    const asin = path.replace(/^\/+/, '');    // remove leading slash
-    const affiliateTag = "dailydealsa0f-20";  // Your affiliate tag
+    // ----- Get the path after domain -----
+    let path = window.location.pathname; // e.g., "/B09G3HRMVB" or "/A2SK1OY9WLWJ3D"
+    const codeOrAsin = path.replace(/^\/+/, ''); // remove leading slash
+    const affiliateTag = "dailydealsa0f-20";
 
-    if (!asin) {
-      document.body.innerHTML = "<p>Error: ASIN missing! Please provide a valid Amazon product ASIN in the URL.</p>";
-      throw new Error("ASIN missing in URL");
+    if (!codeOrAsin) {
+      document.body.innerHTML = "<p>Error: Amazon code or ASIN missing in the URL!</p>";
+      throw new Error("Missing code/ASIN");
     }
 
-    const appLink = `amazon://dp/${asin}?tag=${affiliateTag}`;
-    const webLink = `https://www.amazon.com/dp/${asin}?tag=${affiliateTag}`;
+    // ----- Detect type -----
+    // If it starts with "B0" → treat as product ASIN
+    const isASIN = /^B0/i.test(codeOrAsin);
 
+    let webLink, appLink;
+
+    if (isASIN) {
+      // Product ASIN
+      webLink = `https://www.amazon.com/dp/${codeOrAsin}?tag=${affiliateTag}`;
+      appLink = `amazon://dp/${codeOrAsin}?tag=${affiliateTag}`;
+    } else {
+      // Promo code
+      webLink = `https://www.amazon.com/promocode/${codeOrAsin}`;
+      appLink = null; // Amazon app link not reliable for promo codes
+    }
+
+    // Set fallback link
     document.getElementById("fallback-link").href = webLink;
 
-    // ----- Detect if in-app browser (Facebook, Instagram, TikTok, etc.) -----
+    // ----- Detect in-app browsers -----
     const ua = navigator.userAgent || navigator.vendor || window.opera;
     const inAppBrowser = /(FBAN|FBAV|Instagram|Line|Twitter|Snapchat)/i.test(ua);
 
     if (inAppBrowser) {
-      // Show browser warning and button
+      // Show warning + button
       document.getElementById("browser-warning").style.display = "block";
-
       document.getElementById("open-in-browser").addEventListener("click", () => {
-        // Redirect to web link which can open the app via universal link
         window.location.href = webLink;
       });
     } else {
-      // Normal browsers: attempt app redirect
-      const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+      // Normal browsers
+      const isMobile = /iPhone|iPad|iPod|Android/i.test(ua);
 
-      if (isMobile) {
-        // Try app first
+      if (isMobile && appLink) {
+        // Try app first for ASIN products
         window.location.href = appLink;
 
-        // Fallback to web after 2 seconds
+        // Fallback to web after 2s
         setTimeout(() => {
           window.location.href = webLink;
         }, 2000);
       } else {
-        // Desktop: open web directly
+        // Promo codes or desktop
         window.location.href = webLink;
       }
     }
