Enhance redirect handling and user interaction
Refactor redirect logic to handle user interactions and improve app link detection.

--- a/redirect.html
+++ b/redirect.html
@@ -48,7 +48,6 @@
   <script>
     const affiliateTag = "dailydealsa0f-20";
 
-    // Clean path and query
     const path = window.location.pathname.replace(/^\/+/, "");
     const query = window.location.search || "";
 
@@ -57,7 +56,6 @@
       throw new Error("Missing path");
     }
 
-    // Detect ASIN
     const isASIN = /^B0[A-Z0-9]{8}$/i.test(path);
     const hasTag = /[?&]tag=/.test(query);
 
@@ -65,12 +63,10 @@
     let appLink = null;
 
     if (isASIN) {
-      // Product page
       webLink = `https://www.amazon.com/dp/${path}${query || `?tag=${affiliateTag}`}`;
       if (!hasTag) webLink += (query ? "&" : "?") + `tag=${affiliateTag}`;
       appLink = `amazon://dp/${path}?tag=${affiliateTag}`;
     } else {
-      // Promo page
       if (hasTag) {
         webLink = `https://www.amazon.com/promocode/${path}${query}`;
       } else {
@@ -79,23 +75,22 @@
       }
     }
 
-    // ---------------- Fallback link: continue in browser ----------------
     const fallbackLink = document.getElementById("fallback-link");
+    const openButton = document.getElementById("open-in-browser");
+
+    // Flag to cancel automatic redirect if user clicks
+    let userClicked = false;
+
     fallbackLink.href = webLink;
     fallbackLink.addEventListener("click", (e) => {
       e.preventDefault();
-      window.location.href = webLink; // just stay in browser
+      userClicked = true;
+      window.location.href = webLink; // stay in browser
     });
 
-    // ---------------- Detect in-app browsers ----------------
-    const ua = navigator.userAgent || "";
-    const inAppBrowser = /(FBAN|FBAV|Instagram|Line|Twitter|Snapchat)/i.test(ua);
-    const isMobile = /iPhone|iPad|iPod|Android/i.test(ua);
-
-    const openButton = document.getElementById("open-in-browser");
-
-    // Button reliably opens Amazon app using iframe trick
     openButton.onclick = () => {
+      userClicked = true;
+      // Try to open app via iframe
       const start = Date.now();
       const iframe = document.createElement("iframe");
       iframe.style.display = "none";
@@ -104,32 +99,35 @@
 
       setTimeout(() => {
         const elapsed = Date.now() - start;
-        if (elapsed < 1200) {
-          window.location.href = webLink; // fallback if app not installed
-        }
+        if (elapsed < 1200) window.location.href = webLink;
         document.body.removeChild(iframe);
       }, 1000);
     };
 
+    // Detect in-app browsers and mobile
+    const ua = navigator.userAgent || "";
+    const inAppBrowser = /(FBAN|FBAV|Instagram|Line|Twitter|Snapchat)/i.test(ua);
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(ua);
+
     if (inAppBrowser) {
-      // Show button for in-app browsers
       document.getElementById("browser-warning").style.display = "block";
     } else if (isMobile && appLink) {
-      // Automatically open app on mobile if user does nothing
+      // Automatic app redirect (only if user hasn't clicked)
       setTimeout(() => {
-        const start = Date.now();
-        const iframe = document.createElement("iframe");
-        iframe.style.display = "none";
-        iframe.src = appLink;
-        document.body.appendChild(iframe);
-        setTimeout(() => {
-          const elapsed = Date.now() - start;
-          if (elapsed < 1200) window.location.href = webLink;
-          document.body.removeChild(iframe);
-        }, 1000);
+        if (!userClicked) {
+          const start = Date.now();
+          const iframe = document.createElement("iframe");
+          iframe.style.display = "none";
+          iframe.src = appLink;
+          document.body.appendChild(iframe);
+          setTimeout(() => {
+            const elapsed = Date.now() - start;
+            if (elapsed < 1200) window.location.href = webLink;
+            document.body.removeChild(iframe);
+          }, 1000);
+        }
       }, 500);
     } else {
-      // Desktop or no app: just open web link
       window.location.href = webLink;
     }
   </script>
